# Lidar_ROS

./: README.md
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/config/: ekf.yaml  nav2_params.yaml
src/my_cpp_pkg/launch/: my_world_nav.launch.py
src/my_cpp_pkg/maps/: map.pgm  map.yaml
src/my_cpp_pkg/nodes/: battery_node.py  patrol_manager.py
src/my_cpp_pkg/robot/: robot.urdf
src/my_cpp_pkg/worlds/: map.world  slam_track.world
